fix: horizontal scrollbar on docs navbar

--- a/source/typerio-xyz/styles/docsNavbar.module.css
+++ b/source/typerio-xyz/styles/docsNavbar.module.css
@@ -102,11 +102,10 @@
 .navBot {
     position: relative;
 
-    width: fit-content;
+    /* width: fit-content; */
     .link {
         display: flex;
         justify-content: center;
-
         font-size: 1.2rem;
 
         .p {
@@ -156,16 +155,15 @@
         width: fit-content;
         height: 99vh;
 
-        overflow: auto;
+        overflow: hidden;
 
         border-right: 2px solid var(--grey1);
     }
 
     .navBot {
         position: absolute;
-        bottom: 0;
-        left: 1vw;
-
+        bottom: 4px;
+       left: 10px;
         width: 100%;
     }
 
